--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
+    "react-transition-group": "^4.4.5",
+    "uuid": "^11.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
